--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         <activity
         android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.ConfigActivity"
         android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.WelcomeActivity"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
