--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-        android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.ConfigActivity"
-        android:label="@string/app_name">
+            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.ConfigActivity"
+            android:label="@string/app_name">
+        </activity>
+        <activity
+            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.ViewAllPlayersActivity"
+            android:label="SpaceTrader">
         </activity>
         <activity
             android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.WelcomeActivity"
