--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="edu.gatech.cs2340.willcodeforfood.spacetrader">
 
@@ -8,20 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".View.CargoActivity"></activity>
         <activity
-            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.ConfigActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name=".View.ConfigActivity"
+            android:label="@string/app_name"></activity>
         <activity
-            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.ViewAllGamesActivity"
-            android:label="@string/app_name">
-        </activity>
+            android:name=".View.ViewAllGamesActivity"
+            android:label="@string/app_name"></activity>
         <activity
-            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.UniverseActivity"
-            android:label="SpaceTrader">
-        </activity>
+            android:name=".View.UniverseActivity"
+            android:label="SpaceTrader"></activity>
         <activity
-            android:name="edu.gatech.cs2340.willcodeforfood.spacetrader.View.WelcomeActivity"
+            android:name=".View.WelcomeActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,6 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
+
 </manifest>
