--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".View.CargoActivity"></activity>
-        <activity
-            android:name=".View.ConfigActivity"
-            android:label="@string/app_name"></activity>
-        <activity
-            android:name=".View.ViewAllGamesActivity"
-            android:label="@string/app_name"></activity>
-        <activity
-            android:name=".View.UniverseActivity"
-            android:label="SpaceTrader"></activity>
-        <activity
-            android:name=".View.WelcomeActivity"
-            android:label="@string/app_name">
+        <activity android:name=".View.ConfigActivity"></activity>
+        <activity android:name=".View.ViewAllGamesActivity"></activity>
+        <activity android:name=".View.UniverseActivity"></activity>
+        <activity android:name=".View.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
