--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,8 @@
         <activity android:name=".View.ConfigActivity"></activity>
         <activity android:name=".View.ViewAllGamesActivity"></activity>
         <activity android:name=".View.UniverseActivity"></activity>
+        <activity android:name=".View.PlanetActivity"></activity>
+        <activity android:name=".View.MarketActivity"></activity>
         <activity android:name=".View.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
