--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".View.CargoActivity"></activity>
+        <activity android:name=".View.PlanetActivity"></activity>
         <activity
             android:name=".View.ConfigActivity"
             android:label="@string/app_name"></activity>
