--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:theme="@style/AppTheme">
         <activity android:name=".View.ConfigActivity"></activity>
         <activity android:name=".View.ViewAllGamesActivity"></activity>
+        <activity android:name=".View.PlanetActivity"></activity>
+        <activity android:name=".View.MarketActivity"></activity>
+        <activity android:name=".View.MarketBuyActivity"></activity>
+        <activity android:name=".View.MarketSellActivity"></activity>
         <activity android:name=".View.WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
