--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity android:name=".View.ConfigActivity"></activity>
+        <activity android:name=".View.UniverseActivity"></activity>
         <activity android:name=".View.PlanetActivity"></activity>
         <activity android:name=".View.MarketActivity"></activity>
         <activity android:name=".View.MarketBuyActivity"></activity>
