--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".View.PoliceFightActivity"/>
         <activity android:name=".View.TraderActivity"/>
         <activity android:name=".View.HelpPlanetActivity"/>
+        <activity android:name=".View.WarpAnimActivity" />
+        <activity android:name=".View.GameOverActivity" />
 
         <activity android:name=".View.WelcomeActivity">
             <intent-filter>
